--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">To do List</string>
+    <string name="title_task">Title</string>
+    <string name= "description_task">Description</string>
+    <string name="subject">Task Done</string>
+    <string name="text_extra">Look at this! I just finished:</string>
 </resources>
